# BlackRabbitMQ

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODEMAP.md  Main.MD  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
docs/: architecture.md  memory_safety.md  usage_examples_1s.md
src/: AddInNative.cpp  Channel.cpp  Channel.h  Client.cpp  Client.h  Connection.cpp  Connection.h  Consumer.cpp  Consumer.h  EventLoop.cpp  EventLoop.h  ITransport.h  Message.h  TcpTransport.h
src/AddIn1S/: CallContext.h  Component.h  MemoryManager.h  RabbitApi1S.cpp  RabbitApi1S.h  RabbitMQClientNative.cpp  RabbitMQClientNative.h
src/AddIn1S/sdk/: Error.hpp  types.h
src/Platform/: LibeventTransport.cpp  LibeventTransport.h  PocoTransport.cpp  PocoTransport.h  TcpTransportLinux.cpp  TcpTransportLinux.h  TcpTransportWindows.cpp  TcpTransportWindows.h
tests/: CMakeLists.txt  test_call_context.cpp  test_integration.cpp  test_message.cpp
